--- a/front.html
+++ b/front.html
@@ -99,7 +99,7 @@
     ulTuplas.appendChild(data)
     chaveHash.innerHTML = `Chave Hash: ${tupla.chaveHash}`
     ulTuplas.appendChild(chaveHash)
-    page.innerHTML = `Acesso a memória: ${tupla.acessoMemoria}`
+    acessoMemoria.innerHTML = `Acesso a memória: ${tupla.acessoMemoria}`
     ulTuplas.appendChild(acessoMemoria)
     page.innerHTML = `Página: ${tupla.page}`
     ulTuplas.appendChild(page)
